# bytelike

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
bytelike/: Cargo.toml  README.md
bytelike-derive/: Cargo.toml
bytelike-derive/src/: lib.rs
bytelike/src/: lib.rs
bytescale/: Cargo.toml  README.md
bytescale/src/: lib.rs
bytesize/: Cargo.toml  README.md
bytesize/src/: lib.rs
humanbyte/: Cargo.toml  README.md
humanbyte-derive/: Cargo.toml  README.md
humanbyte-derive/src/: lib.rs
humanbyte/src/: lib.rs
