[package]
name = "bytelike"
version = "0.1.4-alpha.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Common functionality for bytelike handling"
keywords = ["byte", "byte-size", "utility", "human-readable", "format"]
license = "Apache-2.0"

[dependencies]
bytelike-derive = { path = "../bytelike-derive", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
derive = ["bytelike-derive"]
serde = ["dep:serde"]