[package]
name = "bytelike"
version = "0.1.10-alpha.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Common types and functions for byte size handling"
keywords = ["byte", "byte-size", "utility", "human-readable", "format", "no_std"]
license = "Apache-2.0"

[dependencies]
bytelike-derive = { version = "0.1.10-alpha.0", path = "../bytelike-derive", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
derive = ["dep:bytelike-derive"]
serde = ["dep:serde", "std", "bytelike-derive/serde"]
