[package]
name = "bytelike"
version = "0.1.11-alpha.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Common types and functions for byte size handling"
keywords = ["byte-size", "utility", "human-readable", "no_std"]
license = "Apache-2.0"

[dependencies]
bytelike-derive = { version = "0.1.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
derive = ["dep:bytelike-derive"]
serde = ["dep:serde", "std", "bytelike-derive/serde"]
