[package]
name = "bytesize"
description = "A utility for human-readable byte count representations"
version = "1.3.0"
authors = ["Hyunsik Choi <hyunsik.choi@gmail.com>", "MrCroxx <mrcroxx@outlook.com>"]
keywords = ["byte", "byte-size", "utility", "human-readable", "format"]
categories = ["development-tools", "filesystem"]
repository = "https://github.com/hyunsik/bytesize"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bytelike = { path = "../bytelike", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0", features = ["std"] }
toml = "0.8"

[features]
default = ["std"]
std = ["bytelike/std"]
arbitrary = ["dep:arbitrary"]
serde = ["bytelike/serde"]
