[package]
name = "humanbyte-derive"
version = "0.1.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "A procedural macro for deriving human readable byte functions"
keywords = ["byte-size", "utility", "human-readable", "no_std"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[features]
default = []
serde = []
