[package]
name = "humanbyte-derive"
version = "0.2.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "A procedural macro for deriving human readable byte functions"
keywords = ["byte-size", "utility", "human-readable", "no_std"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
default = []
serde = []
